adjusted size of section-4 background img to prevent bad stretching

--- a/development/styles.css
+++ b/development/styles.css
@@ -1164,7 +1164,7 @@ Section 4 MQs
   .section-4 {
     height: 60vh;
     margin-bottom: 4rem;
-    background-size: 100% 100%;
+    background-size: 60% 100%;
     background-position: right -80px;
   }
 }
@@ -1173,7 +1173,7 @@ Section 4 MQs
   .section-4 {
     height: 60vh;
     margin-bottom: 4rem;
-    background-size: 90% 90%;
+    background-size: 70% 90%;
     background-position: right -40px;
   }
 }
@@ -1181,7 +1181,7 @@ Section 4 MQs
 @media screen and (max-width: 1700px) {
   .section-4 {
     height: 50vh;
-    background-size: 80% 80%;
+    background-size: 60% 80%;
     background-position: right -10px;
   }
 }
